feat: add dropoff date display in event cards

--- a/server/templates/html-template.hbs
+++ b/server/templates/html-template.hbs
@@ -304,6 +304,14 @@
             </div>
             <div class="event-details">
               {{{formattedDetails}}}
+              {{#if carType}}<div><strong>Car Type:</strong> {{carType}}</div>{{/if}}
+              {{#if pickupLocation}}<div><strong>Pickup Location:</strong> {{pickupLocation}}</div>{{/if}}
+              {{#if dropoffLocation}}<div><strong>Dropoff Location:</strong> {{dropoffLocation}}</div>{{/if}}
+              {{#if pickupTime}}<div><strong>Pickup Time:</strong> {{pickupTime}}</div>{{/if}}
+              {{#if dropoffTime}}<div><strong>Dropoff Time:</strong> {{dropoffTime}}</div>{{/if}}
+              {{#if dropoffDate}}<div><strong>Dropoff Date:</strong> {{dropoffDate}}</div>{{/if}}
+              {{#if licensePlate}}<div><strong>License Plate:</strong> {{licensePlate}}</div>{{/if}}
+              {{#if bookingReference}}<div><strong>Booking Reference:</strong> {{bookingReference}}</div>{{/if}}
             </div>
           </div>
         {{/each}}
