--- a/server/templates/pdf-template.hbs
+++ b/server/templates/pdf-template.hbs
@@ -250,6 +250,7 @@
               {{#if dropoffLocation}}<div><strong>Dropoff Location:</strong> {{dropoffLocation}}</div>{{/if}}
               {{#if pickupTime}}<div><strong>Pickup Time:</strong> {{pickupTime}}</div>{{/if}}
               {{#if dropoffTime}}<div><strong>Dropoff Time:</strong> {{dropoffTime}}</div>{{/if}}
+              {{#if dropoffDate}}<div><strong>Dropoff Date:</strong> {{dropoffDate}}</div>{{/if}}
               {{#if licensePlate}}<div><strong>License Plate:</strong> {{licensePlate}}</div>{{/if}}
               {{#if bookingReference}}<div><strong>Booking Reference:</strong> {{bookingReference}}</div>{{/if}}
             </div>
